# drop

./: .gitignore  Cargo.toml  Dockerfile  README.md
.github/workflows/: build_and_deploy.yml
chart/: Chart.yaml  values.yaml
chart/templates/: certificate.yml  certmanager.yml  deployment.yml  ingress.yml  service.yml
src/: Dockerfile  lib.rs  main.rs
src/backend/: .env  Cargo.toml  Dockerfile  README.md  alias-data.json  db.sqlite3  migrate.js  package-lock.json  package.json
src/backend/migrations/1/: down.sql  up.sql
src/backend/migrations/2021-09-18-190138_task/: down.sql  up.sql
src/backend/src/: Alias.ts  Client.ts  CompositeDrop.ts  Cypher.ts  Drop.ts  DropDb.ts  DropFileStore.ts  DropServer.ts  IDropStorage.ts  index.ts  lib.rs  main.rs
src/backend/src/data/: mod.rs  models.rs  schema.rs
src/data/: mod.rs  models.rs  schema.rs
src/frontend/: index.html  package-lock.json  package.json
src/frontend/src/: apiConnector.js  app.js  cache.js  client.js  drop.js  encryption.js  errors.js  header.js  homePageComponent.js  html.js  sendMessagePageComponent.js  socket.js  welcomePageComponent.js
src/frontend/src/lib/: preact.module.js
src/frontend/src/views/: header.js  homePageComponent.js  sendMessagePageComponent.js  welcomePageComponent.js
