[package]
name = "drop"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = { version = "1.0.0", features = ["sqlite"] }
rocket = "0.4.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0"}
uuid = { version = "0.8.2", features = ["serde", "v4"] }

[dependencies.rocket_contrib]
version = "0.4.10"
default-features = false
features = ["json", "serve"]